Add prescription and billing modules