@@ -2,8 +2,8 @@ package com.shashankcdr.hospitalSystem.service;
 
 import com.shashankcdr.hospitalSystem.dto.DoctorResponseDto;
 import com.shashankcdr.hospitalSystem.repository.DoctorRepository;
+import org.springframework.transaction.annotation.Transactional;
 import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
 import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
 
@@ -12,16 +12,17 @@ import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
-@Slf4j
+
 public class DoctorService {
     private final DoctorRepository doctorRepository;
     private final ModelMapper modelMapper;
 
+    @Transactional(readOnly = true)
     public List<DoctorResponseDto> getAllDoctors() {
         return doctorRepository.findAll()
                 .stream()
                 .map(doctor -> modelMapper.map(doctor, DoctorResponseDto.class))
-                .collect(Collectors.toList());
+                .toList();
     }
 
 
